<resources>
    <string name="app_name">TestApp</string>
    <string name="concat_and_adder">CS Calculator and Comparator</string>
    <string name="add">Compare to Rank Averages</string>
    <string name="concatenate">CS per Min</string>
    <string name="textview">Rank Averages comparison</string>
    <string name="textview2">CS/min</string>
    <string name="name"></string>
    <string name="name2"></string>
</resources>
